@@ -1,3 +1,6 @@
+/**
+ * BSD-style license; for more info see http://pmd.sourceforge.net/license.html
+ */
 package net.sourceforge.pmd.lang.java.rule.comments;
 
 import java.util.ArrayList;
@@ -95,7 +98,7 @@ public abstract class AbstractCommentRule extends AbstractJavaRule {
 				continue;
 			}
 			
-			if (line.charAt(0) == '*') {
+			if (line.length() > 0 && line.charAt(0) == '*') {
 				filteredLines.add(line.substring(1));
 				continue;
 			}
@@ -122,7 +125,7 @@ public abstract class AbstractCommentRule extends AbstractJavaRule {
 				continue;
 			}
 			
-			if (line.charAt(0) == '*') {
+			if (line.length() > 0 && line.charAt(0) == '*') {
 				filteredLines.add(line.substring(1));
 				continue;
 			}
